--- a/ui/src/diffgenepanel.html
+++ b/ui/src/diffgenepanel.html
@@ -14,6 +14,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="apps/genepaneldiff.tsx" type="module"></script>
+    <script src="apps/diffgenepanel.tsx" type="module"></script>
   </body>
 </html>
